# tpfan

./: Makefile  README.md
daemon/: pyproject.toml
daemon/src/tpfan_daemon/: config.py  daemon.py  rpm_stats.py
daemon/src/tpfan_daemon/control/: curve.py  loop.py
daemon/src/tpfan_daemon/hw/: fan.py
daemon/src/tpfan_daemon/ipc/: dbus_service.py  polkit.py
daemon/tests/: conftest.py  test_config.py  test_curve.py  test_daemon_glue.py  test_dbus.py  test_fan.py  test_loop.py  test_polkit.py  test_rpm_stats.py  test_version.py
docs/: manual-test.md
docs/superpowers/plans/: 2026-05-14-user-presets.md
docs/superpowers/specs/: 2026-05-14-boot-grace-design.md  2026-05-14-user-presets-design.md
gui/: pyproject.toml
gui/src/tpfan_gui/: __main__.py  main_window.py  tray.py
gui/src/tpfan_gui/views/: curve_editor.py  dashboard.py  modes.py  status.py
gui/tests/: test_curve_editor.py  test_dashboard.py  test_main_window.py  test_modes.py  test_status.py  test_tray.py
packaging/: org.tpfan1.conf  org.tpfan1.policy  org.tpfan1.service  tpfan-daemon-launcher  tpfan-daemon.service  tpfan-gui-launcher  tpfan-gui.desktop
scripts/: install.sh
