[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tpfan-daemon"
version = "0.1.0"
description = "ThinkPad fan control daemon"
requires-python = ">=3.11"
dependencies = ["dasbus>=1.7"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
tpfan-daemon = "tpfan_daemon.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
