[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tpfan-gui"
version = "0.2.1"
description = "ThinkPad fan control GUI"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = ["PyQt6>=6.6", "pyqtgraph>=0.13", "dasbus>=1.7"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-qt>=4.4"]

[project.scripts]
tpfan-gui = "tpfan_gui.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
